2008-04-26  Glenn Morris  <rgm@gnu.org>

	* textmodes/ispell.el (ispell-insert-word): Revert previous change.

	* simple.el (quoted-insert, zap-to-char): Revert previous change.

2008-04-26  John Paul Wallington  <jpw@pobox.com>

	* hexl.el (hexl-mode): Stash `eldoc-documentation-function' in
	`hexl-mode-old-eldoc-documentation-function'.
	(hexl-mode-exit): Restore it.
	(hexl-mode-old-eldoc-documentation-function): Declare for compiler.

	* w32-fns.el (top-level): Don't set `completion-ignore-case' to t.

2008-04-26  Juanma Barranquero  <lekktu@gmail.com>

	* minibuffer.el (completion-pcm-word-delimiters): Add :group.
	(completion-pcm--all-completions): Doc fix.
	(completion-styles-alist, completion-all-completions):
	Fix typos in docstrings.

2008-04-26  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: There is now only one variable (whitespace-style) to
	specify which kind of blank is visualized.  Doc and docstring fix. New
	version 11.0.
	(whitespace-style): New option, replace whitespace-style-mark and
	whitespace-style-color.
	(whitespace-style-mark, whitespace-style-color): Options removed.
	(whitespace-hspace, whitespace-tab, whitespace-newline)
	(whitespace-trailing, whitespace-line, whitespace-space-before-tab)
	(whitespace-indentation, whitespace-empty, whitespace-space-after-tab)
	(whitespace-hspace-regexp, whitespace-space-regexp)
	(whitespace-tab-regexp, whitespace-trailing-regexp)
	(whitespace-space-before-tab-regexp, whitespace-indentation-regexp)
	(whitespace-empty-at-bob-regexp, whitespace-empty-at-eob-regexp)
	(whitespace-space-after-tab-regexp, whitespace-line-column)
	(whitespace-display-mappings, whitespace-report): Docstring fix.
	(whitespace-color-value-list, whitespace-mark-value-list)
	(whitespace-active-color, whitespace-active-mark)
	(whitespace-toggle-color, whitespace-toggle-mark): Vars removed.
	(whitespace-style-value-list, whitespace-active-style)
	(whitespace-toggle-style): New vars.